<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather +RTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">WeatherMyWay</string>
    <string name="app_subtitle">with Real-Time Personalization®</string>
    <string name="about_weather_my_way">
        The Weather My Way +RTP app uses Real-Time Personalization® technology to provide you with personalized recommendations that optimize your health.\n

        \nThis app is personalized by combining the weather forecast with an analysis of your genes. Since your genes are unique, the recommendations you receive are genetically tailored to you.
    </string>
    <string name="about_weather_my_way_more">This app securely accesses your genetic data that is stored in your Sequencing.com account. Only the genetic data relevant to this app is accessed and no data is stored in your browser or on your mobile device.\n

        \nIf you don\'t have genetic data, don\'t worry! You can still use this app by choosing one of the app\'s fun sample files. This app\'s personalization will then be powered by the genetic data in that sample file. Since all sample files are from individuals, the data and the personalization are real.\n

        \nTo use a sample file, first <a href="https://sequencing.com/user/register">Register for a free account at Sequencing.com</a>. After registering, return to this app, click the \'Sign in with Sequencing.com\' button and select a file from the list of sample files.\n
     </string>
    <string name="register_on_sequencing"><a href="https://sequencing.com/user/register">Register for a free account</a></string>
    <string name="banner">Powered by Sequencing.com</string>
    <string name="title_activity_about">About Weather My Way +RTP</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about_more">About Weather My Way +RTP</string>
    <string name="splash_text">Weather My Way +RTP</string>
    <string name="not_recognized_location">This location is not recognized.\n
        Use the \'Auto-detect location\' button or enter in a nearby location.</string>
    <string name="facebook_app_id">221044514932258</string>
    <string name="share_url">https://sequencing.com</string>
    <string name="share_title">The Weather My Way app just analyzed my genes. Based on today\'s weather. My recommendation is</string>
    <string name="share_description">Turn genetic data into useful information. Sequencing.com provides free, unlimited storage of genetic data as well as access to apps that process genetic data.</string>
    <string name="share_image_uri">https://sequencing.com/sites/default/files/styles/medium/public/weather-my-way-rtp-app-icon-sequencing-com_0.png</string>
    <string name="pref_title_temperature_units">Temperature units</string>
    <string-array name="temperature_units">
        <item>F</item>
        <item>C</item>
    </string-array>
    <string name="pref_title_location">Location</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="email_daily_forecast">Email daily forecast</string>
    <string name="text_daily_forecast">Text daily forecast (SMS)</string>
    <string name="push_daily_forecast">Android notifications</string>
    <string name="pref_title_display_email">Email address</string>
    <string name="pref_title_display_phone_number">Phone number</string>
    <string name="pref_title_display_wake_up_weekdays">Wake up time (weekdays)</string>
    <string name="pref_title_display_wake_up_weekends">Wake up time (weekends)</string>
    <string name="pref_title_timezone">Timezone</string>
    <string name="pref_title_weekend_notifications">Weekend notifications</string>
    <string-array name="weekend_notifications">
        <item>SMS notifications only</item>
        <item>Email notifications only</item>
        <item>Email &amp; SMS (no Android)</item>
        <item>No weekend notifications</item>
        <item>Android notifications only</item>
        <item>Android &amp; email (no SMS)</item>
        <item>Android &amp; SMS (no email)</item>
        <item>All notifications</item>
    </string-array>
    <string-array name="weekend_notifications_values">
        <item>SendSms</item>
        <item>SendEmail</item>
        <item>SendBoth</item>
        <item>None</item>
        <item>Push</item>
        <item>PushAndEmail</item>
        <item>PushAndSms</item>
        <item>All</item>
    </string-array>
    <string name="error_during_receive_genetically_forecast">An error occurred while processing your genetically tailored forecast. Please reload this screen or check back later.</string>
    <string name="pref_header_personal">Real-Time Personalization®</string>
    <string name="connected_account">Connected account</string>
    <string name="mail_summary">Click here to revoke access</string>
    <string name="genetic_data_file">Genetic data obtained from this file:</string>
    <string name="genetic_data_file_summary">This app\'s personalization is powered by
        your genes using data from this file</string>
    <string name="title_activity_location_maps">Location</string>
    <string name="title_activity_location">Select Location</string>
    <string name="location_content_message">Select your location</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected"><xliff:g example="2013" id="item">%1$s</xliff:g> selected</string>
    <string name="deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="general_preferences">General preferences</string>
    <string name="personal_preferences">Real-Time Personalization®</string>
    <string name="notification_preferences">Device notifications</string>
    <string name="user_mess_wait">Analyzing your genes and the weather, together&#8230;</string>
</resources>