<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.sequencing.weather.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.sequencing.weather.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications"
        android:summary="Recieve your genetically tailored forecast every morning by email and text (SMS)."/>

    <header
        android:fragment="com.sequencing.weather.activity.SettingsActivity$PersonalPreferenceFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/pref_header_personal"/>

</preference-headers>
